# billuonaire

./: .gitignore  MSG.TXT  PROJECT.md  SYSTEM.md
app/: pyproject.toml
app/config/: config.json  config.v2.json
app/tests/: harness.py  test_cli.py  test_config.py  test_integration_phase1.py  test_phase2_scenarios.py  test_phase3_scenarios.py  test_phase4_e2e.py  test_phase4_pipeline.py  test_phase5_breaker.py  test_phase5_learning.py  test_taught_integration.py
app/tests/detectors/: test_bpr.py  test_breaker.py  test_breaker_msb.py  test_compression.py  test_compression_fade.py  test_drift_continuation.py  test_extremes.py  test_fvg.py  test_fvg_cb.py  test_fvg_n.py  test_htf_nest.py  test_incremental.py  test_index.py  test_inducement.py  test_liquidity.py  test_mitigation.py  test_ob_lux.py  test_ob_taught.py  test_orderblock.py  test_premium_discount.py  test_propulsion2.py  test_propulsion_block.py  test_registry.py  test_structure.py  test_sweep.py  test_swings.py  test_timestats.py  test_turtle_soup.py  test_volume.py  test_wyckoff.py
app/tests/engine/: test_confluence.py  test_context.py  test_decision.py  test_entry.py  test_gates.py  test_grade.py  test_ladder.py  test_levels.py  test_memory_bounds.py  test_po3.py  test_scanner.py  test_template.py
app/tests/execution/: test_manager.py  test_paper.py
app/tests/feed/: test_file.py  test_historical_date_contract.py  test_mock.py
app/tests/fixtures/: heromotoco_h1.csv
app/trader/: cli.py  config.py
app/trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: ab_tradebook.py  (+11 more)
(+1176 files in other folders)
