[project]
name = "trader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=13", "pydantic>=2.7", "pandas>=2.2", "pyarrow>=16"]

[project.optional-dependencies]
dev = ["pytest>=8"]
data = ["yfinance>=0.2"]

[project.scripts]
trader = "trader.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trader*"]

[tool.setuptools.package-data]
trader = ["templates/*.json"]
